# acpica

./: CMakeLists.txt
source/components/utilities/: utprint.c
source/include/: actypes.h
source/include/platform/: acenv.h  actos.h
